Small improvements according to hints